unpackaged/objects/copado__Copado_Feature__c.object
<CustomObject>
	<fields>
		<fullName>copado__Application__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Application</label>
		<referenceTo>copado__Application__c</referenceTo>
		<relationshipLabel>Features</relationshipLabel>
		<relationshipName>Features</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Architect__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Architect</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Features1</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Complexity__c</fullName>
		<label>Complexity</label>
		<precision>10</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Description__c</fullName>
		<label>Description</label>
		<length>131072</length>
		<type>Html</type>
	</fields>
	<fields>
		<fullName>copado__Epic__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Epic</label>
		<referenceTo>copado__Epic__c</referenceTo>
		<relationshipLabel>Features</relationshipLabel>
		<relationshipName>Features</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Estimated_Value__c</fullName>
		<label>Estimated Value</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>copado__Feature_Title__c</fullName>
		<label>Feature Title</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Priority__c</fullName>
		<label>Priority</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Product_Owner__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Product Owner</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Features</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Requested</fullName>
				</value>
				<value>
					<fullName>Under Review</fullName>
				</value>
				<value>
					<fullName>Refinement</fullName>
				</value>
				<value>
					<fullName>Rejected</fullName>
				</value>
				<value>
					<fullName>Accepted</fullName>
				</value>
				<value>
					<fullName>Coming Soon</fullName>
				</value>
				<value>
					<fullName>Delivered</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Technical_Assumptions__c</fullName>
		<label>Technical Assumptions</label>
		<length>131072</length>
		<type>Html</type>
	</fields>
	<fields>
		<fullName>copado__Users__c</fullName>
		<label># Users</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Value_Type__c</fullName>
		<label>Value Type</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Time Savings</fullName>
				</value>
				<value>
					<fullName>New Revenue</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<label>Feature (deprecated)</label>
	<nameField>
		<displayFormat>F-{0000000000}</displayFormat>
		<label>Feature Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Features (deprecated)</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>